--- a/index.html
+++ b/index.html
@@ -630,7 +630,113 @@
             </li>
           </ul>
         </div>
+        <div class="footer-container-subscribtion">
+          <p class="footer-container-subscribtion-text">Subscribe</p>
+          <form class="footer-container-subscribtion-form">
+            <label for="" class="footer-container-subscribtion-form-label">
+              <input
+                type="email"
+                placeholder="E-mail"
+                name="email"
+                class="footer-container-subscribtion-form-label-input"
+              />
+            </label>
+            <button
+              type="submit"
+              class="footer-container-subscribtion-form-btn"
+            >
+              <p>Subscribe</p>
+              <svg
+                width="24"
+                height="24"
+                class="footer-container-subscribtion-form-btn-svg"
+              >
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+    <div class="pop-up-container">
+      <div class="pop-up">
+        <button type="button" class="pop-up-btn">
+          <svg width="8" height="8" class="">
+            <use href="./images/icons.svg#cross"></use>
+          </svg>
+        </button>
+        <p class="pop-up-text">Leave your contacts and we will call you back</p>
+      </div>
+      <form>
+        <div class="pop-up-form">
+          <label for="user-name" class="pop-up-form-label">Name</label>
+          <div class="pop-up-form-field">
+            <input
+              type="text"
+              id="user-name"
+              name="user-name"
+              class="pop-up-form-field-input"
+            />
+            <svg widht="18" height="24" class="pop-up-form-field-svg">
+              <use href="./images/icons.svg#icon-user"></use>
+            </svg>
+          </div>
+          <label for="phone" class="pop-up-form-label">Phone</label>
+          <div class="pop-up-form-field">
+            <input
+              type="phone"
+              id="phone"
+              name="phone"
+              class="pop-up-form-field-input"
+            />
+            <svg widht="18" height="24" class="pop-up-form-field-svg">
+              <use href="./images/icons.svg#icon-phone"></use>
+            </svg>
+          </div>
+          <label for="mail" class="pop-up-form-label">Email</label>
+          <div class="pop-up-form-field">
+            <input
+              type="mail"
+              id="mail"
+              name="mail"
+              class="pop-up-form-field-input"
+            />
+            <svg widht="18" height="24" class="pop-up-form-field-svg">
+              <use href="./images/icons.svg#icon-mail"></use>
+            </svg>
+          </div>
+          <div class="pop-up-form-field-comment">
+            <label for="user-comment" class="pop-up-form-label">Comment</label>
+            <textarea
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+              class="pop-up-form-field-comment-textarea"
+            ></textarea>
+            <div class="pop-up-form-field-comment-checkbox">
+              <input
+                id="user-privacy"
+                type="checkbox"
+                value="true"
+                name="user-privacy"
+                class="visually-hidden"
+              />
+              <label
+                for="user-privacy"
+                class="pop-up-form-field-comment-checkbox-label"
+                ><span class="accent"
+                  ><svg width="10" height="8">
+                    <use
+                      href="./images/icons.svg#icon-checkbox"
+                    ></use></svg></span
+                >I accept the terms and conditions of the
+                <a href="" class="policy-link">Privacy Policy</a>
+              </label>
+            </div>
+          </div>
+        </div>
+        <button type="button" class="pop-up-form-btn">Send</button>
+      </form>
+    </div>
   </body>
 </html>
