--- a/index.html
+++ b/index.html
@@ -633,8 +633,9 @@
         <div class="footer-container-subscribtion">
           <p class="footer-container-subscribtion-text">Subscribe</p>
           <form class="footer-container-subscribtion-form">
-            <label for="" class="footer-container-subscribtion-form-label">
+            <label for="email" class="footer-container-subscribtion-form-label">
               <input
+                id="email"
                 type="email"
                 placeholder="E-mail"
                 name="email"
@@ -645,7 +646,7 @@
               type="submit"
               class="footer-container-subscribtion-form-btn"
             >
-              <p>Subscribe</p>
+              Subscribe
               <svg
                 width="24"
                 height="24"
@@ -661,12 +662,12 @@
     <div class="pop-up-container">
       <div class="pop-up">
         <button type="button" class="pop-up-btn">
-          <svg width="8" height="8" class="">
+          <svg width="8" height="8" class="pop-up-btn-svg">
             <use href="./images/icons.svg#cross"></use>
           </svg>
         </button>
-        <p class="pop-up-text">Leave your contacts and we will call you back</p>
       </div>
+      <p class="pop-up-text">Leave your contacts and we will call you back</p>
       <form>
         <div class="pop-up-form">
           <label for="user-name" class="pop-up-form-label">Name</label>
@@ -677,31 +678,31 @@
               name="user-name"
               class="pop-up-form-field-input"
             />
-            <svg widht="18" height="24" class="pop-up-form-field-svg">
+            <svg width="18" height="24" class="pop-up-form-field-svg">
               <use href="./images/icons.svg#icon-user"></use>
             </svg>
           </div>
           <label for="phone" class="pop-up-form-label">Phone</label>
           <div class="pop-up-form-field">
             <input
-              type="phone"
+              type="tel"
               id="phone"
               name="phone"
               class="pop-up-form-field-input"
             />
-            <svg widht="18" height="24" class="pop-up-form-field-svg">
+            <svg width="18" height="24" class="pop-up-form-field-svg">
               <use href="./images/icons.svg#icon-phone"></use>
             </svg>
           </div>
           <label for="mail" class="pop-up-form-label">Email</label>
           <div class="pop-up-form-field">
             <input
-              type="mail"
+              type="email"
               id="mail"
               name="mail"
               class="pop-up-form-field-input"
             />
-            <svg widht="18" height="24" class="pop-up-form-field-svg">
+            <svg width="18" height="24" class="pop-up-form-field-svg">
               <use href="./images/icons.svg#icon-mail"></use>
             </svg>
           </div>
