--- a/index.html
+++ b/index.html
@@ -666,46 +666,57 @@
             <use href="./images/icons.svg#cross"></use>
           </svg>
         </button>
-      </div>
-      <p class="pop-up-text">Leave your contacts and we will call you back</p>
-      <form>
-        <div class="pop-up-form">
-          <label for="user-name" class="pop-up-form-label">Name</label>
-          <div class="pop-up-form-field">
-            <input
-              type="text"
-              id="user-name"
-              name="user-name"
-              class="pop-up-form-field-input"
-            />
-            <svg width="18" height="24" class="pop-up-form-field-svg">
-              <use href="./images/icons.svg#icon-user"></use>
-            </svg>
+        <p class="pop-up-text">Leave your contacts and we will call you back</p>
+        <form class="pop-up-form">
+          <!-- Name field -->
+          <div class="pop-up-form-field-wrapper">
+            <label for="user-name" class="pop-up-form-label">Name</label>
+            <div class="pop-up-form-field">
+              <input
+                type="text"
+                id="user-name"
+                name="user-name"
+                class="pop-up-form-field-input"
+              />
+              <svg width="18" height="24" class="pop-up-form-field-svg">
+                <use href="./images/icons.svg#icon-user"></use>
+              </svg>
+            </div>
           </div>
-          <label for="phone" class="pop-up-form-label">Phone</label>
-          <div class="pop-up-form-field">
-            <input
-              type="tel"
-              id="phone"
-              name="phone"
-              class="pop-up-form-field-input"
-            />
-            <svg width="18" height="24" class="pop-up-form-field-svg">
-              <use href="./images/icons.svg#icon-phone"></use>
-            </svg>
+
+          <!-- Phone field -->
+          <div class="pop-up-form-field-wrapper">
+            <label for="user-phone" class="pop-up-form-label">Phone</label>
+            <div class="pop-up-form-field">
+              <input
+                type="tel"
+                id="user-phone"
+                name="user-phone"
+                class="pop-up-form-field-input"
+              />
+              <svg width="18" height="24" class="pop-up-form-field-svg">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
           </div>
-          <label for="mail" class="pop-up-form-label">Email</label>
-          <div class="pop-up-form-field">
-            <input
-              type="email"
-              id="mail"
-              name="mail"
-              class="pop-up-form-field-input"
-            />
-            <svg width="18" height="24" class="pop-up-form-field-svg">
-              <use href="./images/icons.svg#icon-mail"></use>
-            </svg>
+
+          <!-- Email field -->
+          <div class="pop-up-form-field-wrapper">
+            <label for="user-email" class="pop-up-form-label">Email</label>
+            <div class="pop-up-form-field">
+              <input
+                type="email"
+                id="user-email"
+                name="user-email"
+                class="pop-up-form-field-input"
+              />
+              <svg width="18" height="24" class="pop-up-form-field-svg">
+                <use href="./images/icons.svg#icon-mail"></use>
+              </svg>
+            </div>
           </div>
+
+          <!-- Comment -->
           <div class="pop-up-form-field-comment">
             <label for="user-comment" class="pop-up-form-label">Comment</label>
             <textarea
@@ -714,30 +725,35 @@
               placeholder="Text input"
               class="pop-up-form-field-comment-textarea"
             ></textarea>
-            <div class="pop-up-form-field-comment-checkbox">
-              <input
-                id="user-privacy"
-                type="checkbox"
-                value="true"
-                name="user-privacy"
-                class="visually-hidden"
-              />
-              <label
-                for="user-privacy"
-                class="pop-up-form-field-comment-checkbox-label"
-                ><span class="accent"
-                  ><svg width="10" height="8">
-                    <use
-                      href="./images/icons.svg#icon-checkbox"
-                    ></use></svg></span
-                >I accept the terms and conditions of the
-                <a href="" class="policy-link">Privacy Policy</a>
-              </label>
-            </div>
           </div>
-        </div>
-        <button type="button" class="pop-up-form-btn">Send</button>
-      </form>
+
+          <!-- Checkbox -->
+          <div class="pop-up-form-field-comment-checkbox">
+            <input
+              id="user-privacy"
+              type="checkbox"
+              name="user-privacy"
+              value="true"
+              class="visually-hidden"
+            />
+            <label
+              for="user-privacy"
+              class="pop-up-form-field-comment-checkbox-label"
+            >
+              <span class="accent">
+                <svg width="10" height="8">
+                  <use href="./images/icons.svg#icon-checkbox"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="" class="policy-link">Privacy Policy</a>
+            </label>
+          </div>
+
+          <!-- Submit -->
+          <button type="submit" class="pop-up-form-btn">Send</button>
+        </form>
+      </div>
     </div>
   </body>
 </html>
