--- a/index.html
+++ b/index.html
@@ -734,14 +734,14 @@
               type="checkbox"
               name="user-privacy"
               value="true"
-              class="visually-hidden"
+              class="visually-hidden checkbox-input"
             />
             <label
               for="user-privacy"
               class="pop-up-form-field-comment-checkbox-label"
             >
-              <span class="accent">
-                <svg width="10" height="8">
+              <span class="checkbox-custom">
+                <svg width="10" height="8" class="checkbox-icon">
                   <use href="./images/icons.svg#icon-checkbox"></use>
                 </svg>
               </span>
